--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,12 +1,14 @@
+
+#footercontainer{
+  padding-bottom: 2.5rem;
+}
 .foot{
   position: fixed;
-  left: 0;
   bottom: 0;
-  height: 20px;
   width: 100%;
+  height: 2.5rem;
   background-color: #7a95ee;
   color: white;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 10px;
   text-align: center;
 }
